src/objects/Competitive_Source_Apps__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Top 10 App On</relationshipLabel>
        <relationshipName>Competitive_Source_Appss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitive_Sources__c</fullName>
        <label>Competitive Sources</label>
        <referenceTo>Competitive_Sources__c</referenceTo>
        <relationshipLabel>Competitive Source Apps</relationshipLabel>
        <relationshipName>Competitive_Source_Appss</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Sourced__c</fullName>
        <inlineHelpText>This is the date this data was pulled. On this date, this App was a top app for this specific source.</inlineHelpText>
        <label>Date Sourced</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rank_If_applicable__c</fullName>
        <label>Rank (If applicable)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitive Source Apps</label>
    <nameField>
        <displayFormat>ComptApp-{0000}</displayFormat>
        <label>Competitive Source Apps Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive_Source_Appss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>